--- a/ShopProductServer/_Imports.razor
+++ b/ShopProductServer/_Imports.razor
@@ -9,3 +9,4 @@
 @using ShopProductServer
 @using ShopProductServer.Shared
 @using ShopProductServer.Pages.BlazorPage.BlazorComponents
+@using ShopProductServer.Helper 
