--- a/ShopProductServer/Shared/NavMenu.razor
+++ b/ShopProductServer/Shared/NavMenu.razor
@@ -42,6 +42,16 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Father / Son  |Relation
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="book">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Books
+            </NavLink>
+        </li>   
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="blazorjs">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Blazor With JS
+            </NavLink>
+        </li>
     </ul>
 </div>
 
