--- a/ShopProductServer/wwwroot/css/site.css
+++ b/ShopProductServer/wwwroot/css/site.css
@@ -48,3 +48,21 @@ a, .btn-link {
         right: 0.75rem;
         top: 0.5rem;
     }
+
+.book-img {
+    display:block;
+    width: 100%;
+    height: 150px;
+    background-size: cover !important;
+    border: 3px solid green;
+    position: relative;
+}
+.book-img-title {
+    display: inline-block;
+    background-color: green;
+    position: absolute;
+    top:0;
+    right:0;
+    color:white;
+    padding:0px 6px;
+}
