--- a/ShopProductServer/_Imports.razor
+++ b/ShopProductServer/_Imports.razor
@@ -9,4 +9,5 @@
 @using ShopProductServer
 @using ShopProductServer.Shared
 @using ShopProductServer.Pages.BlazorPage.BlazorComponents
-@using ShopProductServer.Helper 
+@using ShopProductServer.Helper
+@using Blazored.TextEditor
